--- a/hugme.html
+++ b/hugme.html
@@ -58,6 +58,10 @@
           },
         ];
 
+        embedded_svc.settings.enabledFeatures = ["LiveAgent"];
+        embedded_svc.settings.entryFeature = "LiveAgent";
+
+
         embedded_svc.init(
           "https://obviobrasil.my.salesforce.com",
           "https://obviobrasil.my.site.com/espacocliente",
