--- a/empresa-nao-pagante.html
+++ b/empresa-nao-pagante.html
@@ -9,6 +9,8 @@
   <body>
     <h1>Bot Empresa não Pagante</h1>
 
+    <!-- Incluir no site do RA - Inicio -->
+
     <style type="text/css">
       .embeddedServiceHelpButton .helpButton .uiButton {
         background-color: #02793e;
@@ -88,5 +90,7 @@
         initESW("https://service.force.com");
       }
     </script>
+
+    <!-- Incluir no site do RA - Fim -->
   </body>
 </html>
