--- a/hugme.html
+++ b/hugme.html
@@ -9,6 +9,8 @@
   <body>
     <h1>Bot Hugme</h1>
 
+    <!-- Incluir no site do RA - Inicio -->
+
     <style type="text/css">
       .embeddedServiceHelpButton .helpButton .uiButton {
         background-color: #02793e;
@@ -95,5 +97,7 @@
         initESW("https://service.force.com");
       }
     </script>
+
+    <!-- Incluir no site do RA - Fim -->
   </body>
 </html>
