--- a/ra-verificada.html
+++ b/ra-verificada.html
@@ -9,6 +9,8 @@
   <body>
     <h1>Bot RA Verificada</h1>
 
+    <!-- Incluir no site do RA - Inicio -->
+
     <style type="text/css">
       .embeddedServiceHelpButton .helpButton .uiButton {
         background-color: #02793e;
@@ -94,5 +96,7 @@
         initESW("https://service.force.com");
       }
     </script>
+
+    <!-- Incluir no site do RA - Fim -->
   </body>
 </html>
