--- a/hugme.html
+++ b/hugme.html
@@ -11,15 +11,16 @@
 
     <!-- Incluir no site do RA - Inicio -->
 
-    <style type="text/css">
-      .embeddedServiceHelpButton .helpButton .uiButton {
-        background-color: #02793e;
-        font-family: "Tacoma", sans-serif;
-      }
-      .embeddedServiceHelpButton .helpButton .uiButton:focus {
-        outline: 1px solid #02793e;
-      }
-    </style>
+    <style type='text/css'>
+	.embeddedServiceHelpButton .helpButton .uiButton {
+		background-color: #8DCD36;
+		font-family: "Arial", sans-serif;
+	}
+	.embeddedServiceHelpButton .helpButton .uiButton:focus {
+		outline: 1px solid #8DCD36;
+	}
+</style>
+
 
     <script
       type="text/javascript"
@@ -64,24 +65,22 @@
         embedded_svc.settings.entryFeature = "LiveAgent";
 
 
-        embedded_svc.init(
-          "https://obviobrasil.my.salesforce.com",
-          "https://obviobrasil.my.site.com/espacocliente",
-          gslbBaseURL,
-          "00Dj0000001o7HY",
-          "Bot_empresa_pagante",
-          {
-            baseLiveAgentContentURL:
-              "https://c.la3-c1-ph2.salesforceliveagent.com/content",
-            deploymentId: "5723Z000000L8iU",
-            buttonId: "5733Z000000PBRZ",
-            baseLiveAgentURL:
-              "https://d.la3-c1-ph2.salesforceliveagent.com/chat",
-            eswLiveAgentDevName: "Bot_empresa_pagante",
-            isOfflineSupportEnabled: false,
-          }
-        );
-      };
+       embedded_svc.init(
+			'https://obviobrasil.my.salesforce.com',
+			'https://obviobrasil.my.salesforce-sites.com/liveAgentSetupFlow',
+			gslbBaseURL,
+			'00Dj0000001o7HY',
+			'Bot_Hugme',
+			{
+				baseLiveAgentContentURL: 'https://c.la3-c1-ph2.salesforceliveagent.com/content',
+				deploymentId: '5723Z000000L8iU',
+				buttonId: '5733Z000000PBRZ',
+				baseLiveAgentURL: 'https://d.la3-c1-ph2.salesforceliveagent.com/chat',
+				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I3Z000000fxUHUAY_18a1f1886e3',
+				isOfflineSupportEnabled: false
+			}
+		);
+	};
 
       if (!window.embedded_svc) {
         var s = document.createElement("script");
